--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@reduxjs/toolkit": "1.8.2",
     "@stripe/react-stripe-js": "1.8.1",
     "@stripe/stripe-js": "1.31.0",
