--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.10.0",
     "axios": "0.27.2",
     "bootstrap": "5.1.3",
+    "firebase": "^10.5.2",
     "react": "^18.2.0",
     "react-alice-carousel": "2.6.1",
     "react-bootstrap": "2.4.0",
