--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redux-persist": "6.0.0",
     "redux-thunk": "2.4.1",
     "sass": "1.67.0",
-    "socket.io-client": "4.5.1",
+    "socket.io-client": "^4.7.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
