--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "0.27.2",
     "bootstrap": "5.1.3",
     "firebase": "^10.5.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-alice-carousel": "2.6.1",
     "react-bootstrap": "2.4.0",
@@ -59,5 +60,8 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3"
+  },
+  "engines": {
+    "node": "18.17.1"
   }
 }
